serial monitor and gps receive

--- a/platformio.ini
+++ b/platformio.ini
@@ -17,3 +17,14 @@ lib_deps =
 	adafruit/Adafruit SSD1306@^2.4.0
 	mbed-nkhorman/Adafruit_GFX@0.0.0+sha.7fb1d4d3525d
 	adafruit/Adafruit BusIO@^1.5.0
+	adafruit/Adafruit GPS Library@^1.5.2
+build_flags = 
+	-D PIO_FRAMEWORK_ARDUINO_SERIAL_DISABLE
+	-D PIO_FRAMEWORK_ARDUINO_ENABLE_CDC
+	-D USBCON
+	-D USBD_USE_CDC
+	-D USBD_VID=0x0483
+	-D USBD_PID=0x5740
+	-D USB_MANUFACTURER_STRING="\"Adafruit\""
+	-D USB_PRODUCT_STRING="\"STM32F405 Feather Express\""
+	-D HAL_PCD_MODULE_ENABLED
